# incfontdisc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md
demos/: demo_1.cpp
include/incfontdisc/: incfontdisc.hpp
src/: backend_dwrite.cpp  backend_fontconfig.cpp  incfontdisc.cpp
src/private_inc/incfontdisc_private/: backend.hpp
